# tgvest

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  library.properties  platformio.ini
examples/Ring/: Ring.ino
examples/Vest/: Vest.ino
extras/: demo.cpp  test-client.py  test-server.py
src/: DFSparks.h  main.cpp  vest.cpp
src/dfsparks/: board.cpp  board.h  button.cpp  button.h  color.cpp  color.h  config.h  effect.cpp  effect.h  log.cpp  log.h  math.cpp  math.h  network.cpp  network.h  palette.cpp  palette.h  pixels.h  player.cpp  player.h  playlist.cpp  playlist.h  timer.cpp  timer.h  vest.cpp  vest.h
src/dfsparks/effects/: blink.h  fireworks.h  flame.cpp  flame.h  glitter.h  plasma.h  rainbow.h  rider.h  slantbars.h  threesine.h
src/dfsparks/networks/: esp8266wifi.cpp  esp8266wifi.h  udpsocket.cpp  udpsocket.h
xcode/: DFSparks.xcconfig  playground.cpp  playground.hpp
xcode/DFSparks.xcodeproj/: project.pbxproj
xcode/DFSparks.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
xcode/DFSparks.xcodeproj/project.xcworkspace/xcuserdata/david.xcuserdatad/: UserInterfaceState.xcuserstate
xcode/DFSparks.xcodeproj/xcuserdata/david.xcuserdatad/xcschemes/: DFSparks.xcscheme  DFSparksExec.xcscheme  Vest.xcscheme  VestOld.xcscheme  xcschememanagement.plist
xcode/Vest/: main.cpp
xcode/xcode/: main.cpp
xcode0/: main.cpp
xcode0/DFSparks.xcodeproj/: project.pbxproj
xcode0/DFSparks.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
xcode0/DFSparks.xcodeproj/project.xcworkspace/xcuserdata/david.xcuserdatad/: UserInterfaceState.xcuserstate
xcode0/DFSparks.xcodeproj/xcuserdata/david.xcuserdatad/xcschemes/: DFSparks.xcscheme  xcschememanagement.plist
